CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(insurlt)

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    SET(CMAKE_CXX_FLAGS "-Wall -std=c++11")
ENDIF()

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake ${CMAKE_MODULE_PATH})

FIND_PACKAGE(FCGIPP REQUIRED)
SET(EXTRA_LIBRARIES ${FCGIPP_LIBRARIES} ${EXTRA_LIBRARIES})

# Build source list with enabled components
SET(INSURLT_FILES insurlt.cpp)

# Build executable
ADD_EXECUTABLE(insurlt ${INSURLT_FILES})
TARGET_LINK_LIBRARIES(insurlt ${EXTRA_LIBRARIES})
SET_TARGET_PROPERTIES(insurlt PROPERTIES OUTPUT_NAME "insurlt.fcgi")
