CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(insurlt)

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    SET(CMAKE_CXX_FLAGS "-Wall -std=c++11")
ENDIF()

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake ${CMAKE_MODULE_PATH})

FIND_PACKAGE(FCGIPP REQUIRED)
SET(EXTRA_LIBRARIES ${FCGIPP_LIBRARIES} ${EXTRA_LIBRARIES})

# Build source list with enabled components
SET(INSURLT_FILES insurlt.cpp permgen.cpp)

# Build executable
ADD_EXECUTABLE(insurlt ${INSURLT_FILES})
TARGET_LINK_LIBRARIES(insurlt ${EXTRA_LIBRARIES})
SET_TARGET_PROPERTIES(insurlt PROPERTIES OUTPUT_NAME "insurlt.fcgi")

# Test binary
OPTION(BUILD_TESTS "Build the tests program" OFF)
IF(BUILD_TESTS)
    FIND_PACKAGE(CppUnit REQUIRED)
    INCLUDE_DIRECTORIES(${CPPUNIT_INCLUDE_DIRS})

    SET(TESTS_FILES test.cpp test_permgen.cpp permgen.cpp)

    ADD_EXECUTABLE(tests ${TESTS_FILES})
    TARGET_LINK_LIBRARIES(tests ${EXTRA_LIBRARIES} ${CPPUNIT_LIBRARIES})
ENDIF()
